<resources>
    <string name="app_name">Materjalide Ladu</string>
    <string name="btn_foam_in">Porolooni vastuvõtt</string>
    <string name="btn_foam_out">Porolooni väljastus</string>
    <string name="btn_fabrics_out">Kangaste väljastus</string>
    <string name="toast_nothing_to_show">Pole veel midagi näidata</string>
    <string name="header_foamin_product_code">Tootekood</string>
    <string name="header_foamin_quantity">Kogus</string>
    <string name="header_foamin_ok">OK</string>
    <string name="search_hint">Sisesta otsing siia</string>
    <string name="current_date_sample">Ridu: </string>
    <string name="no_open_positions">Saabumata ridu pole</string>
    <string name="foam_in_deleted_title">Saabunud tellimuste read</string>
    <string name="foam_in_del_order_number">Tellimus</string>
    <string name="txt_order_already_loaded">See tellimus on juba sisse laetud!</string>
    <string name="title_forders_to_be_deleted">Kustutamist ootavad tellimused</string>
    <string name="lines_title">Ridu: </string>
    <string name="no_orders_warning">Pole ühtegi tellimust!</string>
    <string name="order_no_title">Tellimuse nr:</string>
    <string name="send_report">Saada kokkuvõte e-mailiga...</string>
    <string name="position_restored">Olek taastatud!</string>
    <string name="no_report_lines">Pole vigadega ridu!</string>
    <string name="product_code_sample">P-FOAM-A55</string>
    <string name="fi_tbt_checked_quantity">Saabunud</string>
    <string name="fi_tbt_separator">/</string>
    <string name="fi_tbt_ordered_qty">Tellitud</string>
    <string name="fi_tbt_filled">Täidetud</string>
    <string name="fi_tbt_order_nuber">Tellimuse number</string>
    <string name="no_finished_orders">Pole ühtegi tellimust!</string>
    <string name="nothing_to_edit">Pole ühtegi tellimust, mida muuta!</string>
    <string name="nothing_to_delete">Pole ühtegi tellimust, mida kustutada!</string>
    <string name="txt_list_already_loaded">Väljastusleht juba sisse laetud!</string>
    <string name="txt_no_plans_loaded">Väljastusi pole laetud</string>
    <string name="fo_week_nr_txt">Nädala nr:</string>
    <string name="date_text">Kuupäev</string>
    <string name="foam_out_given_text">Väljast.</string>
    <string name="foam_out_planned">Plaan</string>
    <string name="foam_out_week_nr">Nädala number</string>
    <string name="foam_out_to_be_deleted_title">Kustutamist ootavad nädalaplaanid</string>
    <string name="foam_out_given">Väljast. / </string>
    <string name="no_plan_to_delete">Pole ühtegi porolooniplaani, mida kustutada!</string>
    <string name="no_plan_to_edit">Pole ühtegi porolooniplaani, mida muuta!</string>
    <string name="foam_out_given_title">Väljastatud poroloon</string>
    <string name="foam_out_date_title">Kuupäev</string>
    <string name="week_text">Nädal</string>
    <string name="fab_out_bs_planned_title">Plaan</string>
    <string name="fab_out_bs_remaining_title">Jääk</string>
</resources>
