<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoamOutEditActivity">

    <ImageView
        android:id="@+id/imageView_edit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/date_textview_edit"
        style="@style/FoamInHeaderAttr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/foam_out_given_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:visibility="gone"
        android:id="@+id/spinner_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_edit" />

    <SearchView
        android:visibility="gone"
        android:id="@+id/foam_in_searchview_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxWidth="300dp"
        android:queryBackground="@color/white"
        android:queryHint="@string/search_hint"
        android:searchHintIcon="@null"
        android:searchIcon="@drawable/ic_search_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/week_number_edit"
        style="@style/FoamInHeaderAttr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/foam_out_date_title"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3_del"
        style="@style/FoamInHeaderAttr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="16dp"
        android:text="@string/header_foamin_product_code"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4_edit"
        style="@style/FoamInHeaderAttr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="16dp"
        android:text="@string/header_foamin_quantity"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_edit"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView5_edit"
        style="@style/FoamInHeaderAttr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:text="@string/header_foamin_ok"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_edit"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_edit">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/foam_out_recyclerview_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>