<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_foam_in"
        style="@style/MainButton"
        android:layout_width="325dp"
        android:layout_height="200dp"
        android:layout_marginTop="200dp"
        android:text="@string/btn_foam_in"
        app:layout_constraintBottom_toTopOf="@+id/btn_foam_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_foam_out"
        style="@style/MainButton"
        android:layout_width="325dp"
        android:layout_height="200dp"
        android:text="@string/btn_foam_out"
        app:layout_constraintBottom_toTopOf="@+id/btn_fbrcs_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_foam_in" />

    <Button
        android:id="@+id/btn_fbrcs_out"
        style="@style/MainButton"
        android:layout_width="325dp"
        android:layout_height="200dp"
        android:layout_marginBottom="200dp"
        android:text="@string/btn_fabrics_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_foam_out" />

    <ImageButton
        android:id="@+id/btn_foamin_download"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/btn_foam_in"
        app:layout_constraintTop_toTopOf="@+id/btn_foam_in"
        app:srcCompat="@drawable/ic_file_download_black" />

    <ImageButton
        android:id="@+id/btn_foamin_edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="75dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/btn_foam_in"
        app:layout_constraintTop_toTopOf="@+id/btn_foam_in"
        app:srcCompat="@drawable/ic_edit_black" />

    <ImageButton
        android:id="@+id/btn_foamin_deleted"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="137dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/btn_foam_in"
        app:layout_constraintTop_toTopOf="@+id/btn_foam_in"
        app:srcCompat="@drawable/ic_delete_black" />

    </androidx.constraintlayout.widget.ConstraintLayout>